text classification: updated

--- a/notebooks/text_classification/esg-bert.ipynb
+++ b/notebooks/text_classification/esg-bert.ipynb
@@ -17,6 +17,7 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification, pipeline\n",
+    "import warnings\n",
     "\n",
     "os.chdir(\"../..\")\n",
     "tqdm.pandas()"
@@ -150,12 +151,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load tokenizer and model\n",
+    "# load tokenizer and model on GPUs\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"nbroad/ESG-BERT\")\n",
     "model = AutoModelForSequenceClassification.from_pretrained(\"nbroad/ESG-BERT\")\n",
+    "model.to(\"cuda:0\")\n",
     "\n",
     "# pipeline for text classification\n",
-    "text_classifier = pipeline('text-classification', model=model, tokenizer=tokenizer)"
+    "text_classifier = pipeline('text-classification', model=model, tokenizer=tokenizer, device=0)"
    ]
   },
   {
@@ -166,10 +168,10 @@
     {
      "data": {
       "text/plain": [
-       "[{'label': 'GHG_Emissions', 'score': 0.7811035513877869},\n",
-       " {'label': 'Labor_Practices', 'score': 0.9579222798347473},\n",
+       "[{'label': 'GHG_Emissions', 'score': 0.7811033725738525},\n",
+       " {'label': 'Labor_Practices', 'score': 0.9579225182533264},\n",
        " {'label': 'Management_Of_Legal_And_Regulatory_Framework',\n",
-       "  'score': 0.23833788931369781}]"
+       "  'score': 0.23833796381950378}]"
       ]
      },
      "execution_count": 5,
@@ -306,7 +308,7 @@
        "      <th>4</th>\n",
        "      <td>These changes have no impact on our company's ...</td>\n",
        "      <td>Systemic_Risk_Management</td>\n",
-       "      <td>0.773721</td>\n",
+       "      <td>0.773722</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -342,19 +344,19 @@
        "      <th>10</th>\n",
        "      <td>This was driven by mid-teens revenue increases...</td>\n",
        "      <td>Business_Model_Resilience</td>\n",
-       "      <td>0.410247</td>\n",
+       "      <td>0.410248</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>China grew 3% on top of 25% growth in Q1 of la...</td>\n",
        "      <td>Product_Design_And_Lifecycle_Management</td>\n",
-       "      <td>0.507693</td>\n",
+       "      <td>0.507694</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>Looking at our performance by business unit, t...</td>\n",
        "      <td>Business_Model_Resilience</td>\n",
-       "      <td>0.370409</td>\n",
+       "      <td>0.370410</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -372,7 +374,7 @@
        "      <th>15</th>\n",
        "      <td>In addition, to ensure we can meet the strong ...</td>\n",
        "      <td>Management_Of_Legal_And_Regulatory_Framework</td>\n",
-       "      <td>0.229549</td>\n",
+       "      <td>0.229548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -535,18 +537,18 @@
        "1                      Business_Model_Resilience  0.669292  \n",
        "2                       Systemic_Risk_Management  0.301881  \n",
        "3                       Systemic_Risk_Management  0.496821  \n",
-       "4                       Systemic_Risk_Management  0.773721  \n",
+       "4                       Systemic_Risk_Management  0.773722  \n",
        "5                      Business_Model_Resilience  0.743204  \n",
        "6                       Systemic_Risk_Management  0.656891  \n",
        "7                       Systemic_Risk_Management  0.560982  \n",
        "8                      Business_Model_Resilience  0.548486  \n",
        "9        Product_Design_And_Lifecycle_Management  0.813935  \n",
-       "10                     Business_Model_Resilience  0.410247  \n",
-       "11       Product_Design_And_Lifecycle_Management  0.507693  \n",
-       "12                     Business_Model_Resilience  0.370409  \n",
+       "10                     Business_Model_Resilience  0.410248  \n",
+       "11       Product_Design_And_Lifecycle_Management  0.507694  \n",
+       "12                     Business_Model_Resilience  0.370410  \n",
        "13                          Competitive_Behavior  0.178249  \n",
        "14                      Access_And_Affordability  0.238926  \n",
-       "15  Management_Of_Legal_And_Regulatory_Framework  0.229549  \n",
+       "15  Management_Of_Legal_And_Regulatory_Framework  0.229548  \n",
        "16                     Business_Model_Resilience  0.406935  \n",
        "17       Product_Design_And_Lifecycle_Management  0.852054  \n",
        "18                              Customer_Welfare  0.180479  \n",
@@ -585,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +615,7 @@
        "      <th>year</th>\n",
        "      <th>quarter</th>\n",
        "      <th>transcript</th>\n",
-       "      <th>transcript_short</th>\n",
+       "      <th>classification</th>\n",
        "      <th>transcript_esg</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -624,7 +626,7 @@
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
        "      <td>Hello, and welcome to the Q1 2022 Agilent Tech...</td>\n",
-       "      <td>Thank you Emily, and welcome everyone to Agile...</td>\n",
+       "      <td>[{'transcript': 'Hello, and welcome to the Q1 ...</td>\n",
        "      <td>Thank you Emily, and welcome everyone to Agile...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -633,7 +635,7 @@
        "      <td>2022</td>\n",
        "      <td>3</td>\n",
        "      <td>Good afternoon. Thank you for attending today'...</td>\n",
-       "      <td>Thank you, Hannah, and welcome, everyone, to A...</td>\n",
+       "      <td>[{'transcript': 'Good afternoon. Thank you for...</td>\n",
        "      <td>Thank you, Hannah, and welcome, everyone, to A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -642,7 +644,7 @@
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
        "      <td>Good morning, and welcome to the American Airl...</td>\n",
-       "      <td>Good morning, and welcome to the American Airl...</td>\n",
+       "      <td>[{'transcript': 'Good morning, and welcome to ...</td>\n",
        "      <td>Good morning, and welcome to the American Airl...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -651,7 +653,7 @@
        "      <td>2022</td>\n",
        "      <td>2</td>\n",
        "      <td>Good morning, and welcome to the American Airl...</td>\n",
-       "      <td>Good morning, and welcome to the American Airl...</td>\n",
+       "      <td>[{'transcript': 'Good morning, and welcome to ...</td>\n",
        "      <td>Good morning, and welcome to the American Airl...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -660,7 +662,7 @@
        "      <td>2022</td>\n",
        "      <td>2</td>\n",
        "      <td>Good morning, and welcome to the American Airl...</td>\n",
-       "      <td>Good morning, and welcome to the American Airl...</td>\n",
+       "      <td>[{'transcript': 'Good morning, and welcome to ...</td>\n",
        "      <td>Good morning, and welcome to the American Airl...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -675,12 +677,12 @@
        "3    AAL  2022        2  Good morning, and welcome to the American Airl...   \n",
        "4    AAL  2022        2  Good morning, and welcome to the American Airl...   \n",
        "\n",
-       "                                    transcript_short  \\\n",
-       "0  Thank you Emily, and welcome everyone to Agile...   \n",
-       "1  Thank you, Hannah, and welcome, everyone, to A...   \n",
-       "2  Good morning, and welcome to the American Airl...   \n",
-       "3  Good morning, and welcome to the American Airl...   \n",
-       "4  Good morning, and welcome to the American Airl...   \n",
+       "                                      classification  \\\n",
+       "0  [{'transcript': 'Hello, and welcome to the Q1 ...   \n",
+       "1  [{'transcript': 'Good afternoon. Thank you for...   \n",
+       "2  [{'transcript': 'Good morning, and welcome to ...   \n",
+       "3  [{'transcript': 'Good morning, and welcome to ...   \n",
+       "4  [{'transcript': 'Good morning, and welcome to ...   \n",
        "\n",
        "                                      transcript_esg  \n",
        "0  Thank you Emily, and welcome everyone to Agile...  \n",
@@ -690,7 +692,7 @@
        "4  Good morning, and welcome to the American Airl...  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,20 +724,17 @@
     "# text classification\n",
     "def text_classification(transcript):\n",
     "    transcript = split_paragraphs(transcript.split(\"\\n\"))\n",
-    "    scores = text_classifier(transcript)\n",
+    "    with warnings.catch_warnings():\n",
+    "        warnings.filterwarnings(\"ignore\")\n",
+    "        scores = text_classifier(transcript)\n",
     "    return [{\n",
     "        \"transcript\": transcript[i],\n",
     "        \"label\": scores[i][\"label\"],\n",
     "        \"score\": scores[i][\"score\"],\n",
     "    } for i in range(len(transcript))]\n",
     "\n",
-    "classification_results = []\n",
-    "for i, row in tqdm(transcripts.iterrows(), total=transcripts.shape[0]):\n",
-    "    if i < len(classification_results):\n",
-    "        continue\n",
-    "    classification_results.append(text_classification(row.transcript))\n",
-    "\n",
-    "transcripts[\"transcript_esg\"] = pd.Series(classification_results).apply(\n",
+    "transcripts[\"classification\"] = transcripts[\"transcript\"].progress_apply(text_classification)\n",
+    "transcripts[\"transcript_esg\"] = transcripts[\"classification\"].apply(\n",
     "    lambda x: \"\\n\".join([c[\"transcript\"] for c in x if c[\"score\"] > 0.6])\n",
     ")\n",
     "transcripts.head()"
@@ -743,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -751,13 +750,13 @@
      "output_type": "stream",
      "text": [
       "Initial avg. no. of words: 3012.4683678894207\n",
-      "Final avg. no. of words: 1298.3466241360977\n"
+      "Final avg. no. of words: 1298.3872939925573\n"
      ]
     }
    ],
    "source": [
     "print(\"Initial avg. no. of words:\", transcripts.transcript.apply(lambda t: len(t.split())).mean())\n",
-    "print(\"Final avg. no. of words:\", transcripts.transcript_short.apply(lambda t: len(t.split())).mean())"
+    "print(\"Final avg. no. of words:\", transcripts.transcript_esg.apply(lambda t: len(t.split())).mean())"
    ]
   },
   {
@@ -769,11 +768,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "transcripts = transcripts.drop(columns=[\"transcript\"])\n",
+    "transcripts = transcripts.drop(columns=[\"transcript\", \"classification\"])\n",
     "# transcripts.to_csv(\"data/processed/transcripts_esg.csv\", index=False)"
    ]
   },
