data: merge and split

--- a/notebooks/data/merging.ipynb
+++ b/notebooks/data/merging.ipynb
@@ -30,29 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3888, 4)\n"
+      "(3762, 4)\n"
      ]
-    }
-   ],
-   "source": [
-    "transcripts = pd.concat(\n",
-    "    [pd.read_csv(\"data/processed/transcripts-1.csv\"), pd.read_csv(\"data/processed/transcripts-2.csv\")]\n",
-    ").reset_index(drop=True)\n",
-    "print(transcripts.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -77,7 +64,7 @@
        "      <th>ticker</th>\n",
        "      <th>year</th>\n",
        "      <th>quarter</th>\n",
-       "      <th>transcript</th>\n",
+       "      <th>transcript_esg</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -86,61 +73,63 @@
        "      <td>A</td>\n",
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
-       "      <td>Prepared Remarks:\\nOperator\\nHello, and welcom...</td>\n",
+       "      <td>Thank you Emily, and welcome everyone to Agile...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>A</td>\n",
        "      <td>2022</td>\n",
        "      <td>3</td>\n",
-       "      <td>Prepared Remarks:\\nOperator\\nGood afternoon. T...</td>\n",
+       "      <td>Thank you, Hannah, and welcome, everyone, to A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>AAL</td>\n",
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
-       "      <td>Prepared Remarks:\\nOperator\\nGood morning, and...</td>\n",
+       "      <td>Good morning, and welcome to the American Airl...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>AAL</td>\n",
        "      <td>2022</td>\n",
        "      <td>2</td>\n",
-       "      <td>Prepared Remarks:\\nOperator\\nGood morning, and...</td>\n",
+       "      <td>Good morning, and welcome to the American Airl...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>AAL</td>\n",
        "      <td>2022</td>\n",
        "      <td>2</td>\n",
-       "      <td>Prepared Remarks:\\nOperator\\nGood morning, and...</td>\n",
+       "      <td>Good morning, and welcome to the American Airl...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  ticker  year  quarter                                         transcript\n",
-       "0      A  2022        1  Prepared Remarks:\\nOperator\\nHello, and welcom...\n",
-       "1      A  2022        3  Prepared Remarks:\\nOperator\\nGood afternoon. T...\n",
-       "2    AAL  2022        1  Prepared Remarks:\\nOperator\\nGood morning, and...\n",
-       "3    AAL  2022        2  Prepared Remarks:\\nOperator\\nGood morning, and...\n",
-       "4    AAL  2022        2  Prepared Remarks:\\nOperator\\nGood morning, and..."
+       "  ticker  year  quarter                                     transcript_esg\n",
+       "0      A  2022        1  Thank you Emily, and welcome everyone to Agile...\n",
+       "1      A  2022        3  Thank you, Hannah, and welcome, everyone, to A...\n",
+       "2    AAL  2022        1  Good morning, and welcome to the American Airl...\n",
+       "3    AAL  2022        2  Good morning, and welcome to the American Airl...\n",
+       "4    AAL  2022        2  Good morning, and welcome to the American Airl..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "transcripts = pd.read_csv(\"data/processed/transcripts_esg.csv\")\n",
+    "print(transcripts.shape)\n",
     "transcripts.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,18 +138,7 @@
      "text": [
       "(433, 3)\n"
      ]
-    }
-   ],
-   "source": [
-    "esg = pd.read_csv(\"data/processed/esg_score.csv\")\n",
-    "print(esg.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -237,6 +215,8 @@
     }
    ],
    "source": [
+    "esg = pd.read_csv(\"data/processed/esg_score.csv\")\n",
+    "print(esg.shape)\n",
     "esg.head()"
    ]
   },
@@ -256,15 +236,128 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(780, 7)\n"
+      "(764, 7)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>ESG Risk Level</th>\n",
+       "      <th>Total ESG Risk score</th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>year</th>\n",
+       "      <th>quarter</th>\n",
+       "      <th>transcript_esg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Thank you Emily, and welcome everyone to Agile...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Thank you, Hannah, and welcome, everyone, to A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AAL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Good morning, and welcome to the American Airl...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AAL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Good morning, and welcome to the American Airl...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AAL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>AAL</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Good morning, and welcome to the American Airl...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Symbol ESG Risk Level  Total ESG Risk score ticker  year  quarter  \\\n",
+       "0      A            Low                  15.0      A  2022        1   \n",
+       "1      A            Low                  15.0      A  2022        3   \n",
+       "2    AAL            NaN                  29.0    AAL  2022        1   \n",
+       "3    AAL            NaN                  29.0    AAL  2022        2   \n",
+       "4    AAL            NaN                  29.0    AAL  2022        2   \n",
+       "\n",
+       "                                      transcript_esg  \n",
+       "0  Thank you Emily, and welcome everyone to Agile...  \n",
+       "1  Thank you, Hannah, and welcome, everyone, to A...  \n",
+       "2  Good morning, and welcome to the American Airl...  \n",
+       "3  Good morning, and welcome to the American Airl...  \n",
+       "4  Good morning, and welcome to the American Airl...  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.merge(\n",
     "    esg, transcripts, how='inner', left_on=\"Symbol\", right_on=\"ticker\"\n",
     ")\n",
-    "print(df.shape)"
+    "print(df.shape)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rename columns and drop excessive column"
    ]
   },
   {
@@ -293,132 +386,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Symbol</th>\n",
-       "      <th>ESG Risk Level</th>\n",
-       "      <th>Total ESG Risk score</th>\n",
-       "      <th>ticker</th>\n",
-       "      <th>year</th>\n",
-       "      <th>quarter</th>\n",
-       "      <th>transcript</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Prepared Remarks:\\nOperator\\nHello, and welcom...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>A</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Prepared Remarks:\\nOperator\\nGood afternoon. T...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AAL</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>AAL</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Prepared Remarks:\\nOperator\\nGood morning, and...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AAL</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>AAL</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Prepared Remarks:\\nOperator\\nGood morning, and...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AAL</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>AAL</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Prepared Remarks:\\nOperator\\nGood morning, and...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Symbol ESG Risk Level  Total ESG Risk score ticker  year  quarter  \\\n",
-       "0      A            Low                  15.0      A  2022        1   \n",
-       "1      A            Low                  15.0      A  2022        3   \n",
-       "2    AAL            NaN                  29.0    AAL  2022        1   \n",
-       "3    AAL            NaN                  29.0    AAL  2022        2   \n",
-       "4    AAL            NaN                  29.0    AAL  2022        2   \n",
-       "\n",
-       "                                          transcript  \n",
-       "0  Prepared Remarks:\\nOperator\\nHello, and welcom...  \n",
-       "1  Prepared Remarks:\\nOperator\\nGood afternoon. T...  \n",
-       "2  Prepared Remarks:\\nOperator\\nGood morning, and...  \n",
-       "3  Prepared Remarks:\\nOperator\\nGood morning, and...  \n",
-       "4  Prepared Remarks:\\nOperator\\nGood morning, and...  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Rename columns and drop excessive column"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
        "      <th>symbol</th>\n",
        "      <th>year</th>\n",
        "      <th>quarter</th>\n",
-       "      <th>transcript</th>\n",
+       "      <th>transcript_esg</th>\n",
        "      <th>esg_score</th>\n",
        "      <th>esg_risk_level</th>\n",
        "    </tr>\n",
@@ -429,7 +400,7 @@
        "      <td>A</td>\n",
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
-       "      <td>Prepared Remarks:\\nOperator\\nHello, and welcom...</td>\n",
+       "      <td>Thank you Emily, and welcome everyone to Agile...</td>\n",
        "      <td>15.0</td>\n",
        "      <td>Low</td>\n",
        "    </tr>\n",
@@ -438,7 +409,7 @@
        "      <td>A</td>\n",
        "      <td>2022</td>\n",
        "      <td>3</td>\n",
-       "      <td>Prepared Remarks:\\nOperator\\nGood afternoon. T...</td>\n",
+       "      <td>Thank you, Hannah, and welcome, everyone, to A...</td>\n",
        "      <td>15.0</td>\n",
        "      <td>Low</td>\n",
        "    </tr>\n",
@@ -447,7 +418,7 @@
        "      <td>AAL</td>\n",
        "      <td>2022</td>\n",
        "      <td>1</td>\n",
-       "      <td>Prepared Remarks:\\nOperator\\nGood morning, and...</td>\n",
+       "      <td>Good morning, and welcome to the American Airl...</td>\n",
        "      <td>29.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -456,7 +427,7 @@
        "      <td>AAL</td>\n",
        "      <td>2022</td>\n",
        "      <td>2</td>\n",
-       "      <td>Prepared Remarks:\\nOperator\\nGood morning, and...</td>\n",
+       "      <td>Good morning, and welcome to the American Airl...</td>\n",
        "      <td>29.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -465,7 +436,7 @@
        "      <td>AAL</td>\n",
        "      <td>2022</td>\n",
        "      <td>2</td>\n",
-       "      <td>Prepared Remarks:\\nOperator\\nGood morning, and...</td>\n",
+       "      <td>Good morning, and welcome to the American Airl...</td>\n",
        "      <td>29.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -474,12 +445,12 @@
        "</div>"
       ],
       "text/plain": [
-       "  symbol  year  quarter                                         transcript  \\\n",
-       "0      A  2022        1  Prepared Remarks:\\nOperator\\nHello, and welcom...   \n",
-       "1      A  2022        3  Prepared Remarks:\\nOperator\\nGood afternoon. T...   \n",
-       "2    AAL  2022        1  Prepared Remarks:\\nOperator\\nGood morning, and...   \n",
-       "3    AAL  2022        2  Prepared Remarks:\\nOperator\\nGood morning, and...   \n",
-       "4    AAL  2022        2  Prepared Remarks:\\nOperator\\nGood morning, and...   \n",
+       "  symbol  year  quarter                                     transcript_esg  \\\n",
+       "0      A  2022        1  Thank you Emily, and welcome everyone to Agile...   \n",
+       "1      A  2022        3  Thank you, Hannah, and welcome, everyone, to A...   \n",
+       "2    AAL  2022        1  Good morning, and welcome to the American Airl...   \n",
+       "3    AAL  2022        2  Good morning, and welcome to the American Airl...   \n",
+       "4    AAL  2022        2  Good morning, and welcome to the American Airl...   \n",
        "\n",
        "   esg_score esg_risk_level  \n",
        "0       15.0            Low  \n",
@@ -489,7 +460,7 @@
        "4       29.0            NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +471,7 @@
     "    \"ESG Risk Level\": \"esg_risk_level\",\n",
     "    \"Total ESG Risk score\": \"esg_score\",\n",
     "})\n",
-    "df = df[[\"symbol\", \"year\", \"quarter\", \"transcript\", \"esg_score\", \"esg_risk_level\"]]\n",
+    "df = df[[\"symbol\", \"year\", \"quarter\", \"transcript_esg\", \"esg_score\", \"esg_risk_level\"]]\n",
     "df.head()"
    ]
   },
@@ -513,14 +484,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "180 45\n"
+      "177 45\n"
      ]
     }
    ],
@@ -533,14 +504,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(620, 6) (160, 6)\n"
+      "(608, 6) (156, 6)\n"
      ]
     }
    ],
@@ -559,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
